manual/external-secrets/bitwarden/bitwarden-cli-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bitwarden-cli
  namespace: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden-cli
      app.kubernetes.io/name: bitwarden-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bitwarden-cli
        app.kubernetes.io/name: bitwarden-cli
    spec:
      containers:
        - resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 32Mi
          readinessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: bitwarden-cli
          livenessProbe:
            exec:
              command:
                - 'curl'
                - '-X'
                - 'POST'
                - 'http://127.0.0.1:8087/sync?force=true'
            initialDelaySeconds: 20
            timeoutSeconds: 10
            periodSeconds: 120
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          imagePullPolicy: Always
          startupProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 10
            timeoutSeconds: 120
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          terminationMessagePolicy: File
          image: 'quay.io/crscott/bitwarden-cli:0.1'
